<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <com.canerozkaymak.weatherapp.widget.ProgressiveRelativeLayout
        android:id="@+id/parentLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </com.google.android.material.appbar.AppBarLayout>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_first"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/app_bar"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:visibility="gone"
            tools:visibility="visible">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_weather_info"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                tools:visibility="visible">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_timezone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="@+id/icon_view"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Istanbul" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_timezone"
                    tools:text="12.01.2022" />


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_temperature"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:gravity="center"
                    android:textSize="36sp"
                    app:layout_constraintStart_toEndOf="@+id/icon_view"
                    app:layout_constraintTop_toTopOf="@+id/icon_view"
                    tools:text="21" />


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_summary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:gravity="end"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_temperature"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/tv_temperature"
                    app:layout_constraintTop_toTopOf="@+id/tv_temperature"
                    tools:text="Summary" />

                <com.canerozkaymak.weatherapp.widget.WeatherIconsLayout
                    android:id="@+id/icon_view"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_time" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_second"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cv_first"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:visibility="gone"
            tools:visibility="visible">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_apparenttemperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="end"
                    android:text="@string/apparent_temperature"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Apparent Temperature: " />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_apparenttemperature_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:gravity="end"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tv_apparenttemperature"
                    tools:text=" 54 F" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_humidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/humidity"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_apparenttemperature"
                    tools:text="Humidity" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_humidity_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tv_humidity"
                    tools:text="35" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_windspeed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/wind_speed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_humidity"
                    tools:text="56" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_windspeed_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tv_windspeed"
                    tools:text="56" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_precip_probability"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/precip_probability"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/tv_windspeed"
                    tools:text="Precip Probability" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_precip_probability_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tv_precip_probability"
                    tools:text="nice" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_location_not_allowed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/location_not_available"
            android:visibility="gone" />


    </com.canerozkaymak.weatherapp.widget.ProgressiveRelativeLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
